codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chatwidget_markdown_table_matrix_vt100_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---



• Here is a simple Markdown multiplication matrix example for 1-5:

  | x | 1 | 2 | 3 | 4 | 5 |
  |---|---|---|---|---|---|
  | 1 | 1 | 2 | 3 | 4 | 5 |
  | 2 | 2 | 4 | 6 | 8 | 10 |
  | 3 | 3 | 6 | 9 | 12 | 15 |
  | 4 | 4 | 8 | 12 | 16 | 20 |
  | 5 | 5 | 10 | 15 | 20 | 25 |


  Rendered:

┌───┬───┬────┬────┬────┬────┐
│ x │ 1 │ 2  │ 3  │ 4  │ 5  │
├───┼───┼────┼────┼────┼────┤
│ 1 │ 1 │ 2  │ 3  │ 4  │ 5  │
├───┼───┼────┼────┼────┼────┤
│ 2 │ 2 │ 4  │ 6  │ 8  │ 10 │
├───┼───┼────┼────┼────┼────┤
│ 3 │ 3 │ 6  │ 9  │ 12 │ 15 │
├───┼───┼────┼────┼────┼────┤
│ 4 │ 4 │ 8  │ 12 │ 16 │ 20 │
├───┼───┼────┼────┼────┼────┤
│ 5 │ 5 │ 10 │ 15 │ 20 │ 25 │
└───┴───┴────┴────┴────┴────┘
