codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step4_finish_cat_foo.snap
---
source: tui/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Explored
  └ List ls -la
    Read foo.txt (cat foo.txt)
        hello from foo
