codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_begin_restores_working_status.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 2004
expression: terminal.backend()
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"  1 background terminal running: sleep 2 · /ps                                  "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
